# Sliding-Puzzle

./: CMakeLists.txt  Estadisticas.gsl  README.md
Game/: Main.cpp  SlidingPuzzle.cpp  SlidingPuzzle.h
TextConsole/: CColor.h  FontData.h  TextConsole.cpp  TextConsole.h
vs2019/: SlidingPuzzle.vcxproj
